Fix visual settings y-overflow

--- a/app/client/assets/style/session-vis.css
+++ b/app/client/assets/style/session-vis.css
@@ -50,11 +50,17 @@ p.loading-text {
 volume {
     min-height: 550px;
     height: 550px;
+    padding: 0 !important;
 }
 
 /* Enough space for the volume component and controls */
 div.top {
     height: 550px;
+}
+
+visual-settings {
+    height: 550px;
+    overflow-y: scroll;
 }
 
 mask-toggles {
